[gd_scene load_steps=5 format=3 uid="uid://7ybb8y8yuh4g"]

[ext_resource type="Texture2D" uid="uid://eku3eeie8eir" path="res://Assets/Items/Coin/AnimatedTexture_Coin.tres" id="1_etexx"]
[ext_resource type="Script" path="res://Scenes/Collectibles/coin.gd" id="1_qj3gv"]
[ext_resource type="AudioStream" uid="uid://bb1eiiyebguec" path="res://Sound/Sfx/coin.wav" id="3_3twkk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5o1qq"]
radius = 4.0

[node name="Coin" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_qj3gv")

[node name="AnimatedTextureCoin" type="Sprite2D" parent="."]
texture = ExtResource("1_etexx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5o1qq")

[node name="CollectedCoinSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3twkk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="CollectedCoinSfx" to="." method="_on_collected_coin_sfx_finished"]
